<resources>
    <string name="app_name">SkillFlow</string>

    // bottom_nav_menu
    <string name="titleHome">Главная</string>
    <string name="titleFavorites">Избранное</string>
    <string name="titleProfile">Профиль</string>

    // fragment_login
    <string name="tvTitleEntrance">Вход</string>
    <string name="tvTitleEmail">Email</string>
    <string name="hintEmail">example@gmail.com</string>
    <string name="tvTitlePassword">Пароль</string>
    <string name="hintPassword">Введите пароль</string>
    <string name="btnEntranceText">Вход</string>
    <string name="tvTitleRegistration">Нет аккаунта?</string>
    <string name="tvRegistration">Регистрация</string>
    <string name="tvForgotPassword">Забыл пароль</string>
    <string name="error_invalid_email">Неверный формат email</string>

    // dialog_loading
    <string name="tvLoading">Выполняется вход...</string>

    // dialog_error
    <string name="tvTitleError">Ошибка входа</string>
    <string name="btnCancelDialog">Закрыть</string>

    // fragment_home
    <string name="hintSearch">Search courses...</string>
    <string name="tvSort">По дате добавления</string>

    // fragment_favorites
    <string name="tvFavoritesTitle">Избранное</string>
    <string name="tvEmptyList">Список пуст</string>

    // fragment_profile
    <string name="tvProfileTitle">Профиль</string>
    <string name="tvSupport">Написать в поддержку</string>
    <string name="tvSettings">Настройки</string>
    <string name="tvExitProfile">Выйти из аккаунта</string>
    <string name="tvProfileCourses">Ваши курсы</string>

    // fragment_details
    <string name="tvTitleAuthorDescription">Автор</string>
    <string name="tvAuthorDescription">Merion Academy</string>
    <string name="btnStartCourseText">Начать курс</string>
    <string name="btnPlatformCourseText">Перейти на платформу</string>
    <string name="tvTitleAboutCourseDetails">О курсе</string>
    <string name="tvAboutCourseDetails">У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года\n\nКроме теоретических материалов вас ждут тесты и практические задания. Они помогут лучше запомнить новую информацию и прокачать навыки, которые необходимы для реальной работы с RabbitMQ.</string>

    // item_course_home_and_favorites
    <string name="tvItemCourseDetails">Подробнее</string>

</resources>