<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_theme_background"
    tools:context=".ui.fragment.main.ProfileFragment">

    <TextView
        android:id="@+id/tvProfileTitle"
        style="@style/tvProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvProfileTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/cvProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileTitle"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp">

            <TextView
                android:id="@+id/tvSupport"
                style="@style/tvProfileButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvSupport"
                android:drawableEnd="@drawable/icon_arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/viewSeparatorProfile"/>

            <TextView
                android:id="@+id/tvSettings"
                style="@style/tvProfileButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvSettings"
                android:drawableEnd="@drawable/icon_arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/viewSeparatorProfile"/>

            <TextView
                android:id="@+id/tvExitProfile"
                style="@style/tvProfileButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvExitProfile"
                android:drawableEnd="@drawable/icon_arrow_right"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvProfileCourses"
        style="@style/tvProfileCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvProfileCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvProfile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfileCourses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileCourses"
        tools:listitem="@layout/item_course_home_and_favorites" />

</androidx.constraintlayout.widget.ConstraintLayout>