<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_theme_background"
    tools:context=".ui.fragment.main.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imCourseDetails"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/btnEntranceBg"/>

        <ImageView
            android:id="@+id/imBackDetails"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="56dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_arrow_back"
            android:background="@drawable/background_back_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imFavoritesDetails"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/icon_favorites"
            android:background="@drawable/background_favorites_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvTitleCourseDetails"
            style="@style/tvTitleCourseDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imCourseDetails"
            tools:text="Java-разработчик с нуля"/>

        <LinearLayout
            android:id="@+id/llAuthorDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleCourseDetails">

            <ImageView
                android:id="@+id/imAuthorDetails"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                tools:src="@drawable/icon_favorites"
                tools:background="@drawable/background_favorites_details"/>

            <LinearLayout
                android:id="@+id/llAuthorDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp">

                <TextView
                    android:id="@+id/tvTitleAuthorDescription"
                    style="@style/tvTitleAuthorDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTitleAuthorDescription"/>

                <TextView
                    android:id="@+id/tvAuthorDescription"
                    style="@style/tvAuthorDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Merion Academy"/>

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartCourseText"
            style="@style/btnStartCourseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/btnStartCourseText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llAuthorDetails"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlatformCourseText"
            style="@style/btnPlatformCourseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/btnPlatformCourseText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStartCourseText"/>

        <TextView
            android:id="@+id/tvTitleAboutCourseDetails"
            style="@style/tvTitleAboutCourseDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/tvTitleAboutCourseDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPlatformCourseText"/>

        <TextView
            android:id="@+id/tvAboutCourseDetails"
            style="@style/tvAboutCourseDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleAboutCourseDetails"
            tools:text="У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года. У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года. У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года. У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года."/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>